modified UI and added Url Titles

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,19 +7,13 @@ html, body {
 
 .page {
     /*background: url('../images/background.jpg')no-repeat center center fixed;*/
-    /*min-height: 100vh;*/
-    /*width: 100vh;*/
-    /*-webkit-background-size: cover;*/
-    /*-moz-background-size: cover;*/
-    /*-o-background-size: cover;*/
-    /*background-size: cover;*/
     padding-top: 20px;
 }
 h1 {
     color: white;
     font-family: 'sofia';
     font-size: 400%;
-    text-shadow: 2px 2px #FF0000;
+    text-shadow: 2px 2px green;
 }
 
 h4 {
@@ -27,6 +21,7 @@ h4 {
     font-family: 'sofia';
     font-size: 110%;
     text-shadow: 2px 2px black;
+    text-align: center;
 }
 /* Remove the navbar's default margin-bottom and rounded borders */ 
     .navbar {
@@ -37,7 +32,7 @@ h4 {
     /* Add a gray background color and some padding to the footer */
     footer {
       background-color: #f2f2f2;
-      padding: 25px;
+      padding: 5px;
     }
     
   .carousel-inner img {
@@ -72,36 +67,13 @@ ul.dropdown-lr {
     text-align: center;
 	padding: 20px;
 	font-family: inherit;
+    font-size: 200%;
 }
-/*
-html { 
-  background: url(images/1.jpg) no-repeat center center fixed; 
-  background:  no-repeat center center fixed; 
- 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}*/
 
-/*body            { font-family: sans-serif; background: #eee; }
-a, h1, h2       { color: #377ba8; }
-h1, h2          { font-family: 'Palatino', serif; margin: 0; }
-h1              { border-bottom: 2px solid #eee; }
-h2              { font-size: 1.2em; }
-
-.page           { margin: 2em auto; width: auto; border: 5px solid #377ba8;
-                  padding: 0.8em; background: white; }
-.entries        { list-style: none; margin: 0; padding: 0; }
-.entries li     { margin: 0.8em 1.2em; }
-.entries li h2  { margin-left: -1em; }
-.add-entry      { font-size: 0.9em; border-bottom: 1px solid #ccc; }
-.add-entry dl   { font-weight: bold; }
-.metanav        { text-align: right; font-size: 0.8em; padding: 0.3em;
-                  margin-bottom: 1em; background: #fafafa; }
-.flash          { background: #cee5F5; padding: 0.5em;
-                  border: 1px solid #aacbe2; }
-.error          { background: #f0d6d6; padding: 0.5em; }*/
+.shorturl a {
+    font-size: 35px;
+    color: deepskyblue;
+}
 
 .bt-login,.bt-login:hover, .bt-login:active, .bt-login:focus {
     background-color: #ff8627;
@@ -144,4 +116,16 @@ h2              { font-size: 1.2em; }
 .login-modal-footer{
 	margin-top:15px;
 	margin-bottom:15px;
+}
+
+h2{
+    height: 200px;
+    width: 400px;
+    background: black;
+
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    margin-top: -100px;
+    margin-left: -200px;
 }
