--- a/templates/error-Inactive.html
+++ b/templates/error-Inactive.html
@@ -1,5 +1,57 @@
-{% extends "layout.html"%}
-{%block content%}
-<h2>THIS LINK HAS BEEN DISABLED</h2>
- <p><a href="{{ url_for('create_short') }}">Back</a></p>
-{% endblock %}
+
+<style>
+form {
+    border: 3px solid #f1f1f1;
+}
+
+input[type=text], input[type=password] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+
+button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+}
+
+.cancelbtn {
+    width: auto;
+    padding: 10px 18px;
+    background-color: #f44336;
+}
+
+.imgcontainer {
+    text-align: center;
+    margin: 24px 0 12px 0;
+}
+
+
+
+.container {
+    text-align: center;
+    padding: 50px;
+}
+
+
+
+/* Change styles for span and cancel button on extra small screens */
+
+</style>
+<div class="imgcontainer"></div>
+<div class="container" text-center>
+<marquee><h2>THIS LINK HAS BEEN DISABLED BY OWNER</h2></marquee>
+<p> If you want to access this link, please  contact the link owner to Acitvate it</p>
+<p> click the button below to go to the previous page</p>
+</div>
+ <a href="{{ url_for('create_short') }}"><button type="submit">BACK</button></a>
+
+
