--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
                                 <tr>
                                     <!--<td>localhost:5000/{{ row.short_url}}</td>-->
                                     <td>{{ row.title }}</td>
-                                    <td>{{ row.short_url }}</td>
+                                    <td><a href="{{ row.short_url }}">shortifyapp.herokuapp.com/{{ row.short_url }}</a></td>
                                     <td>{{ row.clicks }}</td>
                                     <td><input type="checkbox" {% if row.active %}checked{% endif %} data-toggle="toggle" data-size="small" data-onstyle="success" onchange='changeStatus("{{ row.id }}")'></td>
                                     <td>
@@ -119,7 +119,7 @@
                                 <br> {% for link in pop_link %}
                                       <div class="panel panel-default">
                                      <div class="panel-heading">{{ link.url_title }}</div>
-                                <div class="panel-body">{{ link.url }}</div>
+                                <div class="panel-body"><a href="{{ link.url }}"> {{ link.url }}</a></div>
                             <div class="panel-body"> Clicks: <span class="badge"> {{ link.clicks }} </span></div>
                         </div>
                     {% endfor %}
@@ -128,7 +128,7 @@
                     {% for link in recent_links%}
                     <div class="panel panel-default">
                         <div class="panel-heading">{{ link.url_title }}</div>
-                            <div class="panel-body">{{ link.rec_link }}</div>
+                            <div class="panel-body"><a href="{{ link.rec_link }}"> {{ link.rec_link }}</a></div>
                         <div class="panel-footer">Created: {{ link.date_added }}</div>
                     </div>
                 {% endfor %}
