--- a/templates/register.html
+++ b/templates/register.html
@@ -1,93 +1,56 @@
 
-
-{% block content %}
+<!DOCTYPE html>
+<html>
+    <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='images/favicon2.ico') }}">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/regstyle.css') }}">
+    <link href="https://fonts.googleapis.com/css?family=Sofia" rel="stylesheet">
+    </head>
+    <body>   
+<div class="container ">
+<div class="text">
   <h1>Register.</h1>
   <h6> Fill in your details.</h6>
-  <a href="{{ url_for('create_short') }}"><button2 type="submit">HOME</button2></a>
- 
-<style>
-input[type=text], input[type=email], input[type=password] {
-    width: 50%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 2px solid #ccc;
-    
-    text-align: center;
-}
+  <br>
+  
+   <a href="{{ url_for('create_short') }}"><button2 type="submit">HOME</button2></a>
+  </div>
 
-button {
-    background-color: #4CAF50;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    cursor: pointer;
-    width: 50%;
-}
-h1 {
-    color: black;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 400%;
-    text-shadow: 1px 1px black;
-    text-align: center;
-}
-h6 {
-    text-align: center;
-}
-
-button2 {
-    background-color: green ;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    top: 0px;
-    position: absolute;
-    right: 0px
-    
-}
-
-
-.container { 
-    float: right;
-    padding: 20px;
-}
-
-span.psw {
-    float: right;
-    padding-top: 16px;
-}
-
-
-</style>
+<div class="forms">
+    <div class="flashes">
+      {% for message in get_flashed_messages() %}
+    {{ message }}
+  {% endfor %}
+    </div>
   <form action="{{ url_for('register') }}" method=post>
-   <div class="con1 col-xs-2"> </div>
-    <div class="container ">
-    <div class="con1 col-xs-2"> </div>
-    
+  
  {{ register_form.hidden_tag() }}
 
-
-
+<div class="username">
 {{ register_form.username(placeholder="Enter Username", tabindex="2", class="form-control", autocomplete="off") }}  
-
-    
+</div> 
+ <div class="email">  
 {{ register_form.email(placeholder="Enter Email", tabindex="2", class="form-control", autocomplete="off") }}
-    
+  </div>  
 
+<div class="password">
 {{ register_form.password(placeholder="Password", tabindex="2", class="form-control", autocomplete="off") }}  
+</div>
 
-
-
+<div class="confirm">
 {{ register_form.password2(placeholder="Confirm Password", tabindex="2", class="form-control", autocomplete="off") }} 
-   
+  </div>
 
-
-<button type="submit">Register</button>
-     
-    
+<div class="regbtn">
+<button type="submit">Register</button>  
 </div>
-</div>
+</div> 
   </form>
-{% endblock %}
+  </div>
+</body>
+</html>
 
