--- a/templates/layout.html
+++ b/templates/layout.html
@@ -97,7 +97,7 @@
     </div>
     <br>
      <footer class="container-fluid text-center">
-             <p>copyright Awesome</p>
+             <p> &copy; Awesome</p>
         </footer>
     </body>
 </html>
